@@ -3,74 +3,56 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>
-      Building and Installing CIAO
-    </title>
+    <title>Building and Installing CIAO </title>
     <link rev="made" href="mailto:schmidt@cs.wustl.edu" />
   </head>
-  <body text="#000000" link="#000FFF" vlink="#FF0F0F"
-  bgcolor="#ffffff">
+  <body text="#000000" link="#000FFF" vlink="#FF0F0F" bgcolor="#ffffff">
     <hr />
     <h3>
       Building and Installing CIAO
     </h3>
     <p>
-      The first thing you should do to install CIAO is to set the
-      environment variable <code>CIAO_ROOT</code> to be
-      <code>$TAO_ROOT/CIAO</code>. Please refer to the
-      <a href="../../ACE-INSTALL.html">ACE installation notes</a>
-      and <a href="../TAO-INSTALL.html">TAO installation notes</a>
-      for instructions on setting <code>$ACE_ROOT</code> and
-      <code>$TAO_ROOT</code>, respectively. They are needed since
-      CIAO sits on top of ACE+TAO. Compiling ACE+TAO successfully
-      is the <strong>first</strong> requirement for compiling CIAO.
+      The first thing you should do to install CIAO is to set the environment 
+      variable <code>CIAO_ROOT</code> to be <code>$TAO_ROOT/CIAO</code>. Please refer 
+      to the <a href="../../ACE-INSTALL.html">ACE installation notes</a> and <a href="../TAO-INSTALL.html">
+        TAO installation notes</a> for instructions on setting <code>$ACE_ROOT</code> 
+      and <code>$TAO_ROOT</code>, respectively. They are needed since CIAO sits on 
+      top of ACE+TAO. Compiling ACE+TAO successfully is the <strong>first</strong> requirement 
+      for compiling CIAO.
     </p>
     <p>
-      CIAO is divided into several parts, so different
-      installation/building rules apply to different parts of
-      CIAO.<br />
+      CIAO is divided into several parts, so different installation/building rules 
+      apply to different parts of CIAO.<br />
       <br />
-       <font color="#ff0000">IMPORTANT</font>: There are currently
-      <font color="#ff0000">TWO</font> CIAO implementations with
-      this distribution of the software. The "old" CIAO is designed
-      and implemented based on the orginal
-      <a href="http://www.omg.org/cgi-bin/doc?formal/02-06-65">OMG
-      CCM 3.0 specification</a>, the "new" CIAO is designed and
-      implemented based on the new
-      <a href="http://www.omg.org/cgi-bin/doc?ptc/2003-07-02">OMG's
-      Deployment and Configuration specification</a>. For a
-      temporary solution, we put the "new" CIAO implementation in
-      the <code>$CIAO_ROOT/DAnCE</code> directory, which contains
-      the CIAO core, CIAO examples and Deployment and Configuration
-      Framework. However, both the "old" one and the "new" one have
-      the same modules and structures, which are described as
-      below.<br />
+      <font color="#ff0000">IMPORTANT</font>: There are currently <font color="#ff0000">
+        TWO</font> CIAO implementations with this distribution of the software. The 
+      "old" CIAO is designed and implemented based on the orginal <a href="http://www.omg.org/cgi-bin/doc?formal/02-06-65">
+        OMG CCM 3.0 specification</a>, the "new" CIAO is designed and implemented 
+      based on the new <a href="http://www.omg.org/cgi-bin/doc?ptc/2003-07-02">OMG's 
+        Deployment and Configuration specification</a>. For a temporary solution, we 
+      put the "new" CIAO implementation in the <code>$CIAO_ROOT/DAnCE</code> directory, 
+      which contains the CIAO core, CIAO examples and Deployment and Configuration 
+      Framework. However, both the "old" one and the "new" one have the same modules 
+      and structures, which are described as below.<br />
       <br />
-       (We suggest you use this "new" CIAO instead of the "old"
-      one, since the "old" CIAO will not be officially supported
-      soon.)
+      (We suggest you use this "new" CIAO instead of the "old" one, since the "old" 
+      CIAO will not be officially supported soon.)
     </p>
     <ol>
       <li>
-        CIAO core/examples: This part of CIAO include following
-        directories: <code>$CIAO_ROOT/DAnCE/ciao</code>,
+        CIAO core/examples: This part of CIAO include following directories: <code>$CIAO_ROOT/DAnCE/ciao</code>,
         <code>$CIAO_ROOT/DAnCE/examples</code>.
       </li>
       <li>
-        CIDL Compiler: This part of CIAO include
-        <code>$CIAO_ROOT/CCF</code> and
-        <code>$CIAO_ROOT/CIDLC</code>.
+        CIDL Compiler: This part of CIAO include <code>$CIAO_ROOT/CCF</code> and <code>$CIAO_ROOT/CIDLC</code>.
       </li>
       <li>
-        CIAO Deployment and Configuration Framework: This part of
-        CIAO includes all the directories in
-        <code>$CIAO_ROOT/DAnCE</code> except the ones mentioned
-        above. DAnCE is an implementation of the new
-        <a href="http://www.omg.org/cgi-bin/doc?ptc/2003-07-02">Deployment
-        and Configuration</a> specification. We refer, henceforth,
-        to all pieces as CIAO in general. The above two pieces will
-        be referred specifically by their names as CIDLC and DAnCE
-        though they are part of CIAO.
+        CIAO Deployment and Configuration Framework: This part of CIAO includes all the 
+        directories in <code>$CIAO_ROOT/DAnCE</code> except the ones mentioned above. 
+        DAnCE is an implementation of the new <a href="http://www.omg.org/cgi-bin/doc?ptc/2003-07-02">
+          Deployment and Configuration</a> specification. We refer, henceforth, to all 
+        pieces as CIAO in general. The above two pieces will be referred specifically 
+        by their names as CIDLC and DAnCE though they are part of CIAO.
       </li>
     </ol>
     <hr />
@@ -78,151 +60,131 @@
       Supported Platforms for CIAO
     </h3>
     <p>
-      CIAO should be usable on all platforms that TAO runs on.
-      Please see <a href="../TAO-INSTALL.html">TAO's
-      installation</a> pages for details
+      CIAO should be usable on all platforms that TAO runs on. Please see <a href="../TAO-INSTALL.html">
+        TAO's installation</a> pages for details
     </p>
     <h3>
       Supported Platforms for CIDLC
     </h3>
     <p>
-      CIDLC is supported only on a small subset of platforms.
-      Please refer to
-      <a href="CCF/Documentation/Build.html">this</a> for details
-      on how to build CIDLC.
-    </p><b>For Building CIAO CIDLC Compiler</b> 
+      CIDLC is supported only on a small subset of platforms. Please refer to <a href="CCF/Documentation/Build.html">
+        this</a> for details on how to build CIDLC.
+    </p>
+    <b>For Building CIAO CIDLC Compiler</b>
     <table width="100%" border="1">
       <tr>
-        <td></td>
-      </tr>
-      <tr>
         <td>
-          <b>Fully supported, i.e., continually tested and used
-          daily</b>
+          <b>Fully supported, i.e., continually tested and used daily</b>
         </td>
         <td>
           Windows 2000/XP (VC 7.1), Linux(GCC 3.2 or higher)
         </td>
       </tr>
+      <tr>
+        <td>
+          <b>Binaries <a href="http://www.dre.vanderbilt.edu/cidlc/binary">
+          available</a> intermittently, no automatic builds or tests</b>
+        </td>
+        <td>
+          MacOS, Solaris
+        </td>
+      </tr>
     </table>
     <p>
-      If you have <a href="../../docs/ACE-porting.html">porting
-      questions</a> or have a problem compiling CIAO with TAO and
-      ACE on the platforms shown above please send email to either
-      <a href="news:comp.soft-sys.ace">ACE Newsgroup</a> or the
-      <a href="mailto:ciao-users@cs.wustl.edu">CIAO mailing
-      list</a> and we'll try to help you fix the problems. You can
-      also submit bug reports and enhancement requests in our
-      <a href="../../docs/usage-bugzilla.html">bug tracking
-      system</a>.
+      If you have <a href="../../docs/ACE-porting.html">porting questions</a> or have 
+      a problem compiling CIAO with TAO and ACE on the platforms shown above please 
+      send email to either <a href="news:comp.soft-sys.ace">ACE Newsgroup</a> or the <a href="mailto:ciao-users@cs.wustl.edu">
+        CIAO mailing list</a> and we'll try to help you fix the problems. You can 
+      also submit bug reports and enhancement requests in our <a href="../../docs/usage-bugzilla.html">
+        bug tracking system</a>.
     </p>
     <p>
-      CIAO can be obtained
-      <a href="http://www.dre.vanderbilt.edu/Download.html">electronically</a>
-      via the WWW and ftp.
-      <a href="http://www.dre.vanderbilt.edu/CIAO">CIAO</a> is
-      bundled with the ACE and TAO release. You'll always need the
-      most recent version of ACE and TAO because CIAO tracks
-      changes to ACE and TAO very closely.
+      CIAO can be obtained <a href="http://www.dre.vanderbilt.edu/Download.html">electronically</a>
+      via the WWW and ftp. <a href="http://www.dre.vanderbilt.edu/CIAO">CIAO</a> is 
+      bundled with the ACE and TAO release. You'll always need the most recent 
+      version of ACE and TAO because CIAO tracks changes to ACE and TAO very closely.
     </p>
     <hr />
     <h3>
       Install CIDL Compiler
     </h3>
     <p>
-      We suggest you download the prebuilt binary <code>cidlc(exe)</code>
-      from
-      <strong><a href="http://www.dre.vanderbilt.edu/cidlc/">here</a></strong>
-      if you are using Windows or Linux, or you can build it by
+      We suggest you download the prebuilt binary <code>cidlc(exe)</code> from <strong><a href="http://www.dre.vanderbilt.edu/cidlc/">
+          here</a></strong> or, if you are using Windows or Linux, you can build it by 
       yourself.
     </p>
     <p>
-      <a href="../../MPC/README">MPC</a> is used to build the CIDL
-      compiler on <strong>Linux</strong>. The procedure is outlined
-      below.
+      <a href="../../MPC/README">MPC</a> is used to build the CIDL compiler on <strong>Linux</strong>. 
+      The procedure is outlined below.
     </p>
     <ul>
       <li>
-        Open up
-        <code>$ACE_ROOT/bin/MakeProjectCreator/config/global.features</code>
-        and set cidl=1.
+        Open up <code>$ACE_ROOT/bin/MakeProjectCreator/config/global.features</code> and 
+        set cidl=1.
       </li>
       <li>
-        Make sure you set cidl=1 in
-        <code>$ACE_ROOT/include/makeinclude/platfrom_macros.GNU</code>.
+        Make sure you set cidl=1 in <code>$ACE_ROOT/include/makeinclude/platfrom_macros.GNU</code>.
       </li>
       <li>
-        Install <code>boost_filesystem</code>,
-        <code>boost_regex</code> and <code>Utility Library</code>.
-        For how to do that please see
-        <a href="./CCF/Documentation/Build.html">Build.html</a>.
+        Install <code>boost_filesystem</code>, <code>boost_regex</code> and <code>Utility 
+          Library</code>. For how to do that please see <a href="./CCF/Documentation/Build.html">
+          Build.html</a>.
       </li>
       <li>
-        In <code>$CIAO_ROOT/CIDLC</code> run
-        <code>$ACE_ROOT/bin/mwc.pl CIDLC.mwc</code>
+        In <code>$CIAO_ROOT/CIDLC</code> run <code>$ACE_ROOT/bin/mwc.pl CIDLC.mwc</code>
       </li>
       <li>
-        In <code>$CIAO_ROOT/CIDLC</code> run
-        <code>make</code>.<br />
-         Note: The linking time is a bit long (more than 5 Minutes
-        with an Intel XEON 1.90GHZ CPU, please be patient).
+        In <code>$CIAO_ROOT/CIDLC</code> run <code>make</code>.<br />
+        Note: The linking time is a bit long (more than 5 Minutes with an Intel XEON 
+        1.90GHZ CPU, please be patient).
       </li>
     </ul>
     <p>
-      There are 2 ways to build the CIDL compiler on
-      <strong>Windows</strong>:
+      There are 2 ways to build the CIDL compiler on <strong>Windows</strong>:
     </p>
     <ol>
       <li>
-        Use the provided Visual Studio solution/project file. For
-        detail please see
-        <a href="./CCF/Documentation/Build.html">Build.html</a>
+        Use the provided Visual Studio solution/project file. For detail please see <a href="./CCF/Documentation/Build.html">
+          Build.html</a>
       </li>
       <li>
         Use MPC: (Not supported yet)
       </li>
     </ol>
-        
     <hr />
     <h3>
       Obtaining and Installing Xerces-C
     </h3>
     <p>
-      The Xerces-C XML parsing library is a necessary component to
-      build parts of DAnCE that need to process XML based
-      descriptor files, which include the <b>Plan Launcher</b> and
-      the <b>Repository Manager</b>. Currently, the only Xerces-C
-      version supported by the DOC group is version 2.6 compiled
-      with RTTI support. Earlier versions of the Xerces-C library
-      may work, but only if they were built with RTTI support.
+      The Xerces-C XML parsing library is a necessary component to build parts of 
+      DAnCE that need to process XML based descriptor files, which include the <b>Plan 
+        Launcher</b> and the <b>Repository Manager</b>. Currently, the only Xerces-C 
+      version supported by the DOC group is version 2.6 compiled with RTTI support. 
+      Earlier versions of the Xerces-C library may work, but only if they were built 
+      with RTTI support.
     </p>
     <h4>
       Building Xerces-C
     </h4>
     <p>
-      You may check
-      <a href="http://www.dre.vanderbilt.edu/~wotte/xerces/">here</a>
-      to see if there is a prebuilt binary available for your
-      platform. Otherwise, you will have to obtain the source from
-      the
-      <a href="http://xml.apache.org/xerces-c/download.cgi">Xerces-C
-      webpage</a> and build it. Building Xerces-C is fairly
-      straightfoward. Please see the documentation available
-      <a href="http://xml.apache.org/xerces-c/build.html">here</a>
-      for instructions particular to your platform.
+      You may check <a href="http://www.dre.vanderbilt.edu/~wotte/xerces/">here</a> to 
+      see if there is a prebuilt binary available for your platform. Otherwise, you 
+      will have to obtain the source from the <a href="http://xml.apache.org/xerces-c/download.cgi">
+        Xerces-C webpage</a> and build it. Building Xerces-C is fairly 
+      straightfoward. Please see the documentation available <a href="http://xml.apache.org/xerces-c/build.html">
+        here</a> for instructions particular to your platform.
     </p>
     <ul>
       <li>
-        <strong>NOTE</strong>: Some of the provided projects with
-        Xerces-C attach inconsistant library decorators onto the
-        end of the Xerces-C libraries. The MPC build tool will
-        expect these libraries to be named xerces-c for non debug
+        <strong>NOTE</strong>: Some of the provided projects with Xerces-C attach 
+        inconsistant library decorators onto the end of the Xerces-C libraries. The MPC 
+        build tool will expect these libraries to be named xerces-c for non debug 
         versions, and xerces-cd for debug versions.
       </li>
       <li>
-        <strong>NOTE</strong>: RTTI is not enabled on most Win32
-        targets by default. If you are building your own libraries,
-        please make sure that you enable RTTI support.<br />
+        <strong>NOTE</strong>: RTTI is not enabled on most Win32 targets by default. If 
+        you are building your own libraries, please make sure that you enable RTTI 
+        support.<br />
         <br />
       </li>
     </ul>
@@ -230,26 +192,23 @@
       Xerces-C Environment Settings
     </h4>
     <p>
-      If the Xerces includes and libraries are in your system
-      include and library paths, respectively, then you need not
-      set up any environment and may proceed to the next step. If
-      not, you will need to set an environment variable named
-      XERCESCROOT to a path such that $XERCESCROOT/include points
-      to the includes and $XERCESCROOT/lib points to the libraries.
-      Also make sure that $XERCESCROOT/lib is in the appropriate
-      environment variable that your platform uses to search for
-      dynamically linked libraries.
+      If the Xerces includes and libraries are in your system include and library 
+      paths, respectively, then you need not set up any environment and may proceed 
+      to the next step. If not, you will need to set an environment variable named 
+      XERCESCROOT to a path such that $XERCESCROOT/include points to the includes and 
+      $XERCESCROOT/lib points to the libraries. Also make sure that $XERCESCROOT/lib 
+      is in the appropriate environment variable that your platform uses to search 
+      for dynamically linked libraries.
     </p>
     <hr />
     <h3>
       Install CIAO core/tools/examples
     </h3>
     <p>
-      Most of the GNUmakefiles/project files/solution files
-      required to build CIAO are available in the release. If you
-      don't like the configurations used, please feel free to
-      regenerate them using MPC. Please see
-      <a href="../../MPC/README">this</a> for more details.
+      Most of the GNUmakefiles/project files/solution files required to build CIAO 
+      are available in the release. If you don't like the configurations used, please 
+      feel free to regenerate them using MPC. Please see <a href="../../MPC/README">this</a>
+      for more details.
     </p>
     <p>
       To build CIAO core/tools/examples:
@@ -262,8 +221,8 @@
         Make sure you have the Xerces-C libraries installed/built
       </li>
       <li>
-        Make sure all ACE/TAO/etc. generated libs are in
-        <code>$ACE_ROOT/lib</code>. To build CIAO you will need: 
+        Make sure all ACE/TAO/etc. generated libs are in <code>$ACE_ROOT/lib</code>. To 
+        build CIAO you will need:
         <ul>
           <li>
             <code>ACE</code>
@@ -292,21 +251,18 @@
         </ul>
       </li>
       <li>
-        Make sure you have cidlc or cidlc.exe in
-        <code>$CIAO_ROOT\bin</code> with the right permission
-        setting (executable).
+        Make sure you have cidlc or cidlc.exe in <code>$CIAO_ROOT\bin</code> with the 
+        right permission setting (executable).
       </li>
       <li>
-        Generate the Makefile/Solution/Project files and build 
+        Generate the Makefile/Solution/Project files and build
         <p>
-          For the supported build tools please see
-          <a href="http://downloads.ociweb.com/MPC/MakeProjectCreator.pdf">
-          MPC manual</a>.
+          For the supported build tools please see <a href="http://downloads.ociweb.com/MPC/MakeProjectCreator.pdf">
+            MPC manual</a>.
         </p>
         <p>
-          You have to execute the MPC command in the following
-          directories if you only want to build the examples and
-          have a peek at CIAO:
+          You have to execute the MPC command in the following directories if you only 
+          want to build the examples and have a peek at CIAO:
         </p>
         <ul>
           <li>
@@ -314,60 +270,50 @@
           </li>
         </ul>
         <p>
-          On <strong>Linux</strong>: do
-          <code>$ACE_ROOT/bin/mwc.pl</code> at the locations
-          specified above then <code>make</code>.
+          On <strong>Linux</strong>: do <code>$ACE_ROOT/bin/mwc.pl</code> at the 
+          locations specified above then <code>make</code>.
         </p>
         <p>
-          On <strong>Windows/VC6</strong>: do
-          <code>%ACE_ROOT%/bin/mwc.pl -type vc6</code> at the
-          locations specified above then Open the workspace file
-          and build.
+          On <strong>Windows/VC6</strong>: do <code>%ACE_ROOT%/bin/mwc.pl -type vc6</code>
+          at the locations specified above then Open the workspace file and build.
         </p>
         <p>
-          On <strong>Windows/VC71</strong>: do
-          <code>%ACE_ROOT%/bin/mwc.pl -type vc71</code> at the
-          locations specified above then Open the solution file and
-          build.
+          On <strong>Windows/VC71</strong>: do <code>%ACE_ROOT%/bin/mwc.pl -type vc71</code>
+          at the locations specified above then Open the solution file and build.
         </p>
         <p>
-          <strong>Note:</strong> You can run <code>mwc.pl</code> at
-          <code>$CIAO_ROOT</code> as long as you don't intend to
-          build CIDL compiler with MPC. If this is the
-          case(default), you can run the mwc.pl command with proper
-          augment once then you can do <code>make</code> at
-          <code>$CIAO_ROOT</code> (Linux) or open the
-          workspace/solution file at <code>$CIAO_ROOT</code>
-          (Windows) to build.
+          <strong>Note:</strong> You can run <code>mwc.pl</code> at <code>$CIAO_ROOT</code>
+          as long as you don't intend to build CIDL compiler with MPC. If this is the 
+          case(default), you can run the mwc.pl command with proper augment once then you 
+          can do <code>make</code> at <code>$CIAO_ROOT</code> (Linux) or open the 
+          workspace/solution file at <code>$CIAO_ROOT</code> (Windows) to build.
         </p>
       </li>
-    </ol><strong>Building CIAO quickly</strong> : You can build
-    CIAO quickly by doing the following: 
+    </ol>
+    <strong>Building CIAO quickly</strong> : You can build CIAO quickly by doing 
+    the following:
     <ul class="noindent">
       <li>
-        Remove all the GNUmakefiles or project files that are
-        shipped with the release.
+        Remove all the GNUmakefiles or project files that are shipped with the release.
       </li>
       <li>
         Open up <code>$CIAO_ROOT/CIAOTAO.mwc</code> .
       </li>
       <li>
-        Run <code>$ACE_ROOT/bin/mwc.pl CIAOTAO.mwc</code> from
-        <code>$CIAO_ROOT</code> .
+        Run <code>$ACE_ROOT/bin/mwc.pl CIAOTAO.mwc</code> from <code>$CIAO_ROOT</code> .
       </li>
       <li>
         Type 'make'
       </li>
       <li style="list-style: none">
-        This will build all the required ACE+TAO libraries
-        including CIAO libraries and tools.
+        This will build all the required ACE+TAO libraries including CIAO libraries and 
+        tools.
       </li>
     </ul>
     <hr />
     <p>
-      Back to the
-      <a href="http://www.cs.wustl.edu/~schmidt/CIAO.html">CIAO</a>
-      home page. <!--#include virtual="/~schmidt/cgi-sig.html" -->
-      </p>
+      Back to the <a href="http://www.cs.wustl.edu/~schmidt/CIAO.html">CIAO</a> home 
+      page. <!--#include virtual="/~schmidt/cgi-sig.html" -->
+    </p>
   </body>
 </html>
